<resources>x
    <string name="app_name">NaverMap</string>
    <string name="init_connect">Connect</string>
    <string name="init_disconnect">Disconnect</string>
    <string name="init_arm">ARM</string>
    <string name="init_flightMode">비행모드</string>
    <string name="init_land">LAND</string>
    <string name="init_voltage">Voltage</string>
    <string name="init_altitude">고도</string>
    <string name="init_speed">속도</string>
    <string name="init_yaw">YAW</string>
    <string name="init_satellite">위성</string>
    <string name="init_alt">이륙고도</string>
    <string name="init_clear">CLEAR</string>
    <string name="init_takeoff">TAKE-OFF</string>
    <string name="select_mode">모드선택</string>
    <string name="basic_mode">일반모드</string>
    <string name="interval_mission">간격감시</string>
    <string name="send_mission">임무전송</string>
    <string name="set_distance">거리설정</string>
    <string name="set_interval">간격설정</string>
    <string name="title_alert">알림</string>
    <string name="move_drone">해당 좌표로 이동합니다.</string>
    <string name="move_drone_to_coordinate">드론이 해당 좌표로 이동 중입니다.</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="cancle">취소하셨습니다.</string>
    <string name="map_lock">맵 잠금</string>
    <string name="map_lock_message">맵이 잠겼습니다.</string>
    <string name="map_move">맵 이동</string>
    <string name="map_move_message">맵 잠금이 풀렸습니다.</string>
    <string name="map_move_select">맵 선택</string>
    <string name="map_select">지도 선택</string>
    <string name="satellite_map">위성지도</string>
    <string name="satellite_map_message">위성지도로 변경 되었습니다.</string>
    <string name="topographic_map">지형도</string>
    <string name="topographic_map_message">지형도로 변경 되었습니다.</string>
    <string name="general_map">일반지도</string>
    <string name="general_map_message">일반지도로 변경 되었습니다.</string>
    <string name="cadastral_map_select">지적도선택</string>
    <string name="cadastral_map_off">지적도OFF</string>
    <string name="cadastral_map_off_message">지적도가 꺼졌습니다.</string>
    <string name="cadastral_map_on">지적도ON</string>
    <string name="cadastral_map_on_message">지적도가 켜졌습니다.</string>
    <string name="take_off_altitude_meter">M</string>
    <string name="take_off_altitude_meter_1st_message">이륙고도가</string>
    <string name="take_off_altitude_meter_2nd_message">M로 변경되었습니다.</string>
    <string name="take_off_altitude">이륙고도</string>
    <string name="take_off_altitude_message">이륙고도를 설정해주세요.</string>
    <string name="mission_start">임무시작</string>
    <string name="choose_Apos_Bpos">A좌표와 B좌표를 클릭하세요.</string>
    <string name="guide_mode">가이드 모드 : </string>
    <string name="failed">실패</string>
    <string name="time_out">타임아웃</string>
    <string name="drone_connected">드론이 연결되었습니다.</string>
    <string name="drone_disconnected">드론 연결이 해제되었습니다.</string>
</resources>
