<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jangin.navermap.MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <FrameLayout
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="204dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="500dp"
                android:layout_marginRight="500dp"
                android:layout_marginBottom="150dp"
                android:background="@null"
                tools:listitem="@layout/item_card" />

        </LinearLayout>

        <Button
            android:id="@+id/missionSelect"
            android:layout_width="50dp"
            android:layout_height="52dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="120dp"
            android:textSize="10sp"
            tools:ignore="SmallSp"
            android:text="@string/select_mode" />

        <Button
            android:id="@+id/basicMission"
            android:layout_width="50dp"
            android:layout_height="52dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="45dp"
            android:layout_marginBottom="120dp"
            android:textSize="10sp"
            tools:ignore="SmallSp"
            android:text="@string/basic_mode"
            android:layout_marginStart="45dp" />

        <Button
            android:id="@+id/intervalMission"
            android:layout_width="50dp"
            android:layout_height="52dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp"
            android:layout_marginBottom="120dp"
            android:textSize="10sp"
            tools:ignore="SmallSp"
            android:text="@string/interval_mission"
             />

        <Button
            android:id="@+id/startMission"
            android:layout_width="50dp"
            android:layout_height="52dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="135dp"
            android:layout_marginLeft="135dp"
            android:layout_marginBottom="120dp"
            android:text="@string/send_mission"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/distance"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="94dp"
            android:layout_marginBottom="170dp"
            android:textSize="10sp"
            android:hint="@string/set_distance"
            android:gravity="center"
            tools:ignore="SmallSp"
            android:inputType="number"
            android:background="#D5D5D5"
            android:layout_marginStart="94dp" />

        <EditText
            android:id="@+id/interval"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="140dp"
            android:layout_marginBottom="170dp"
            android:textSize="10sp"
            android:hint="@string/set_interval"
            android:gravity="center"
            android:inputType="number"
            android:background="#D5D5D5"
            tools:ignore="SmallSp"
            android:layout_marginStart="140dp" />

        <Button
            android:id="@+id/btnAlti"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="80dp"
            android:text="@string/init_alt"/>

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_gravity="bottom"
            android:onClick="onBtnConnectTap"
            android:text="@string/init_connect" />

        <Button
            android:id="@+id/btnAltiUp"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_marginBottom="80dp"
            android:layout_marginLeft="75dp"
            android:layout_gravity="bottom"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="↑"
            android:layout_marginStart="75dp" />

        <Button
            android:id="@+id/btnAltiDown"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_marginBottom="80dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="120dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="↓"
            android:layout_marginStart="120dp" />

        <Button
            android:id="@+id/btnARM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:onClick="onArmButtonTap"
            android:text="@string/init_arm"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center_vertical"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="380dp"
        android:weightSum="100"
        android:background="#8C000000">


        <Button
            android:id="@+id/voltage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_voltage"
            android:layout_weight="1"
            android:background="#00000000"
            android:textColor="@android:color/white"/>

        <Spinner
            android:id="@+id/modeSelect"
            android:entries="@array/flightMode"
            android:layout_width="75dp"
            android:layout_height="31dp"
            android:spinnerMode="dropdown"
            android:text="@string/init_flightMode"
            android:layout_weight="1"
            android:background="#4DFFFFFF" />


        <Button
            android:id="@+id/altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_altitude"
            android:layout_weight="1"
            android:background="#00000000"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_speed"
            android:layout_weight="1"
            android:background="#00000000"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/yaw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_yaw"
            android:layout_weight="1"
            android:background="#00000000"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/Satellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_satellite"
            android:layout_weight="1"
            android:background="#00000000"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginLeft="360dp"
        android:layout_marginRight="280dp"
        android:layout_marginEnd="280dp"
        android:layout_marginStart="360dp">

        <Button
            android:id="@+id/mapMove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_move"
            android:visibility="visible"/>

        <Button
            android:id="@+id/mapLock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_lock"
            android:visibility="visible"/>

        <Button
            android:id="@+id/mapLockMove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_move_select"
            android:visibility="visible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginLeft="447dp"
        android:layout_marginRight="193dp"
        android:layout_marginEnd="193dp"
        android:layout_marginStart="447dp">

        <Button
            android:id="@+id/satelliteMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satellite_map"/>

        <Button
            android:id="@+id/topographicMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topographic_map"/>

        <Button
            android:id="@+id/generalMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_map"/>

        <Button
            android:id="@+id/selectMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_select"
            android:visibility="visible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginLeft="537dp"
        android:layout_marginRight="103dp"
        android:layout_marginStart="537dp"
        android:layout_marginEnd="103dp">

        <Button
            android:id="@+id/mapOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastral_map_off"/>

        <Button
            android:id="@+id/mapOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastral_map_on"/>

        <Button
            android:id="@+id/mapOnOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastral_map_select"
            android:visibility="visible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginLeft="627dp"
        android:layout_marginStart="627dp">

        <Button
            android:id="@+id/CLEAR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_clear"
            android:onClick="clearButton"/>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>